[tool.poetry]
name = "test_project"
version = "0.1.0"
description = ""
authors = ["hanoul <hanoul1124@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
wemake-python-styleguide = "^0.16.1"
mypy = "^0.950"
safety = "^1.10.3"
pre-commit = "^2.19.0"
nitpick = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
